--- a/about.html
+++ b/about.html
@@ -22,34 +22,33 @@
       <div class="logo">
         <a href="index.html"><span>Jesse</span>Adamu</a>
       </div>
-      <div class="hamburger-menu">
-        <div class="hamburger-icon">
+      <div class="hamburger-menu" >
+        <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
           <span></span>
           <span></span>
         </div>
         <div class="menu-links">
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html" onclick="toggleMenu()">About</a></li>
+          <li><a href="contact.html" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
     </nav>
 
     <!-- HOME SECTION -->
-    <section class="home"></section>
+  
     <div class="main1">
       <h2 class="myH3">About Me</h2>
     </div>
 
+    <div class="btn-container">
+      <button
+        class="btn-color-2"
+        onclick="window.open('./assets/jesseadamuresume.pdf')"
+      >Resume</button>
+    </div>
+
     <section id="about">
-    <div class="section-container">
-      <div class="section__pic-container">
-        <img
-          src="./jesse's img.jpg"
-          alt="Profile picture"
-          class="about-pic"
-        />
-      </div>
     <div class="section-container">
       <div class="about-details-container">
         <div class="about-containers">
@@ -73,29 +72,62 @@
           </div>
         </div>
       </div>
+    
+  </section>
+
+
+  <div class="main1">
+    <h2 class="myH3">Experience</h2>
+  </div>
+
+  
+
+ 
+  <section id="about">
+    <div class="section-container">
+    <div class="section-container">
+      <div class="about-details-container">
+        <div class="about-containers">
+          <div class="details-container1"> <a class="expolink" href="https://www.linkedin.com/company/98911171/admin/feed/posts/" >
+            <img
+              src="./assets/experience.png"
+              alt="Experience icon"
+              class="icon"
+            />
+            <h3>Saved By Design</h3>
+            <p>Co-Founder & Lead Web Developer<br/>July 2023-Present</p>
+          </a> </div> 
+          <div class="details-container">
+            <img
+              src="./assets/education.png"
+              alt="Education icon"
+              class="icon"
+            />
+            <h3>WNY STEM</h3>
+            <p>Volunteer Instructor <br/>September2022-May 2023</p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
-  
-  <hr class="solid">
-  <div class="main">
-    <h2 class="port-slogan3">
-      "And I will honor and make the place of my feet glorious" ~ Isaiah 60:13
-    </h2>
+ 
 
-    <ul class="socialicons">
-      <li>
-        <a href="https://www.linkedin.com/in/jesseadamu2/">
-          <i class="fab fa fa-linkedin icon"></i>    </a>
-      </li>
-      <li>
-        <a href="https://github.com/ja302324"><i class="fab fa fa-github icon"></i></a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/jesse.adamu/"><i class="fab fa fa-instagram icon"></i></a></li>
-     
+  <hr class="solid">
+
+    <footer>
+    <div class="footer-links">
+      <li><a href="index.html" >Home</a></li>
+      <li><a href="about.html" >About</a></li>
+      <li><a href="contact.html">Contact Me</a></li>
+    </div>
   </div>
 
-    <script src="strict.js"></script>
+  <p class="port-slogan4">
+    "And I will honor and make the place of my feet glorious" ~ Isaiah 60:13
+  </p>
+  </footer>
+
+  <script src="strict.js"></script>
   </body>
 </html>
